# myspace

./: .replit  pyproject.toml  replit.nix  utils.py
attached_assets/: Pasted--1-Efficient-Movement-Collision-Detection-Use-ST-Distance-for-Realistic-Travel-Calculations-I-1738480738346.txt  Pasted--ERRORS--1738535661602.txt  Pasted--FAILURES--1738535374859.txt  Pasted--FAILURES--1738535719018.txt  Pasted--FAILURES-T-1738535325922.txt  Pasted--FAILURES-TestSectorManager-test-sector-1738530729028.txt  Pasted--FAILURES-TestSectorManager-test-sector-a-1738530609684.txt  Pasted--FAILURES-TestSectorManager-test-sector-a-1738530858946.txt  Pasted--FAILURES-TestShip-test-engine-power-s-1738530321076.txt  Pasted--Immediate-Fix-for-the-asyncio-Event-Loop-Issue-Your-error-RuntimeError-There-is-no-current-event-1738554199677.txt  Pasted--It-looks-like-you-re-running-into-an-issue-with-Evennia-and-Django-s-ContentType-model-while-runnin-1738561082117.txt  Pasted--Priority-Event-Manager-Handles-scheduling-and-execution-of-real-time-events-from-typ-1738483314588.txt  Pasted--Project-Overview-I-have-a-design-plan-described-in-Reason-here3-which-outlines-the-developme-1738476408250.txt  Pasted--Prompt-Project-Goal-Implement-PostGIS-utilities-for-real-time-space-tracking-targeting-and-c-1738537403809.txt  Pasted--Sectors-Management-System-Overview-Your-Evennia-based-space-game-uses-a-sector-based-spatial-partit-1738549056134.txt  Pasted--Spatial-Hierarchy-Your-game-s-space-is-organized-into-a-hierarchical-structure-Space-Units-SU--1738542786935.txt  (+35 more)
commands/: bridge.py  tactical.py
(+48 files in other folders)
